--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <a href="./components/avatar/avatar.html">Avatar</a>
+    <a href="./components/alert/alert.html">Alert</a>
 </body>
 
 </html>
