update: index.html badge link add

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="./components/avatar/avatar.html">Avatar</a>
     <a href="./components/alert/alert.html">Alert</a>
+    <a href="./components/badge/badge.html">Badge</a>
 </body>
 
 </html>
