chore: link to button in index file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="./components/avatar/avatar.html">Avatar</a>
     <a href="./components/alert/alert.html">Alert</a>
     <a href="./components/badge/badge.html">Badge</a>
+    <a href="./components/button/button.html">Button</a>
 </body>
 
 </html>
