--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="./components/alert/alert.html">Alert</a>
     <a href="./components/badge/badge.html">Badge</a>
     <a href="./components/button/button.html">Button</a>
+    <a href="./components/card/card.html">Card</a>
 </body>
 
 </html>
