feat:index link add + code snippet add

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sharp UI</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <a href="./components/avatar/avatar.html">Avatar</a>
     <a href="./components/alert/alert.html">Alert</a>
     <a href="./components/badge/badge.html">Badge</a>
     <a href="./components/button/button.html">Button</a>
     <a href="./components/card/card.html">Card</a>
-</body>
-
+    <a href="./components/image/image.html">Image</a>
+    <a href="./components/input/input.html">Input</a>
+    <a href="./components/modal/modal.html">Modal</a>
+  </body>
 </html>
