feat: rating add

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="./components/image/image.html">Image</a>
     <a href="./components/input/input.html">Input</a>
     <a href="./components/modal/modal.html">Modal</a>
+    <a href="./components/toast/toast.html">Toast</a>
   </body>
 </html>
