chore: rating link -> index add

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="./components/input/input.html">Input</a>
     <a href="./components/modal/modal.html">Modal</a>
     <a href="./components/toast/toast.html">Toast</a>
+    <a href="./components/rating/rating.html">rating</a>
   </body>
 </html>
