feat: naviagation add

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="./components/modal/modal.html">Modal</a>
     <a href="./components/toast/toast.html">Toast</a>
     <a href="./components/rating/rating.html">rating</a>
+    <a href="./components/navigation/nav.html">navigation</a>
   </body>
 </html>
