update: index.html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="./components/toast/toast.html">Toast</a>
     <a href="./components/rating/rating.html">rating</a>
     <a href="./components/navigation/nav.html">navigation</a>
+    <a href="./components/grid/grid.html">Grid</a>
   </body>
 </html>
