feat: landing page add

--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./components/button/button.css" />
+    <link rel="stylesheet" href="./css/landing-page.css" />
     <title>Sharp UI</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/pike.png" />
   </head>
 
   <body>
-    <a href="./components/avatar/avatar.html">Avatar</a>
-    <a href="./components/alert/alert.html">Alert</a>
-    <a href="./components/badge/badge.html">Badge</a>
-    <a href="./components/button/button.html">Button</a>
-    <a href="./components/card/card.html">Card</a>
-    <a href="./components/image/image.html">Image</a>
-    <a href="./components/input/input.html">Input</a>
-    <a href="./components/modal/modal.html">Modal</a>
-    <a href="./components/toast/toast.html">Toast</a>
-    <a href="./components/rating/rating.html">rating</a>
-    <a href="./components/navigation/nav.html">navigation</a>
-    <a href="./components/grid/grid.html">Grid</a>
+    <div class="main">
+      <div class="content">
+        <h1>Sharp UI</h1>
+        <p class="project-pitch">
+          Opensource fast and light weight component library. Only think about
+          logic in your next project leave CSS hastle to Sharp UI
+        </p>
+        <div class="btn-container">
+          <a href="./components/get-started/get-started.html">
+            <button class="btn btn-primary">Get started</button>
+          </a>
+          <a href="https://github.com/ajitpsakri/Sharp-UI">
+            <button class="btn btn-outline-secondary">GitHub</button>
+          </a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
